--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "This is a boilerplate for server-side react apps using Next.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "Sidney Ramos",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^6.0.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
-  },
-  "scripts": {
-    "dev": "next"
   }
 }
