--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
@@ -25,6 +26,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "reactstrap": "^6.4.0",
     "style-loader": "^0.23.0"
   }
 }
