--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "isomorphic-unfetch": "^2.0.0",
@@ -26,7 +27,11 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-pose": "^3.3.4",
     "reactstrap": "^6.4.0",
     "style-loader": "^0.23.0"
+  },
+  "devDependencies": {
+    "animate-sass": "^0.8.2"
   }
 }
