--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-ionicons": "^2.1.6",
     "react-pose": "^3.3.4",
     "reactstrap": "^6.4.0",
     "style-loader": "^0.23.0",
