--- a/package.json
+++ b/package.json
@@ -8,39 +8,45 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
   },
-  "now": {
-    "name": "ssreact-boiler",
-    "alias": "ssreact-boiler.now.sh",
-    "scale": {
-      "sfo1": {
-        "min": 1,
-        "max": 1
-      }
-    }
-  },
   "keywords": [],
   "author": "Sidney Ramos",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link-http": "^1.2.0",
+    "axios": "^0.18.0",
+    "babel-loader": "^7.1.5",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "express": "^4.16.3",
+    "filestack-js": "^1.6.0",
+    "graphql": "^0.11.7",
+    "graphql-anywhere": "^4.0.1",
+    "graphql-tag": "^2.5.0",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^7.0.0",
     "node-sass": "^4.9.3",
     "postcss-loader": "^3.0.0",
+    "prop-types": "^15.6.0",
+    "react-accessible-accordion": "^2.4.4",
+    "react-apollo": "^2.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-ionicons": "^2.1.6",
-    "react-pose": "^3.3.4",
+    "react-loader": "^2.4.5",
+    "react-markdown": "^3.1.0",
+    "react-pose": "^4.0.5",
+    "react-redux": "^5.0.7",
     "react-slick": "^0.23.1",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
     "slick-carousel": "^1.8.1",
-    "style-loader": "^0.23.0",
-    "video-react": "^0.13.0"
+    "style-loader": "^0.23.1",
+    "video-react": "^0.13.2"
   },
   "devDependencies": {
     "animate-sass": "^0.8.2"
